# mangala-bulan

./: README.md  pyproject.toml
configs/: adi_scenario1.txt  adi_scenario2.txt  adi_scenario3.txt  adi_scenario4.txt  crank_scenario1.txt  crank_scenario2.txt  crank_scenario3.txt  crank_scenario4.txt  dufort_scenario1.txt  dufort_scenario2.txt  dufort_scenario3.txt  dufort_scenario4.txt  ftcs_scenario1.txt  ftcs_scenario2.txt  ftcs_scenario3.txt  ftcs_scenario4.txt  laasonen_scenario1.txt  laasonen_scenario2.txt  laasonen_scenario3.txt  laasonen_scenario4.txt  rkimex_scenario1.txt  rkimex_scenario2.txt  rkimex_scenario3.txt  rkimex_scenario4.txt
outputs/: adi_method___scenario_0.csv  adi_method___scenario_0.nc  adi_method___scenario_0_timeseries.csv  adi_method___scenario_1.csv  adi_method___scenario_1.nc  adi_method___scenario_1_timeseries.csv
src/mangala_bulan/: __init__.py  cli.py
src/mangala_bulan/core/: __init__.py  solver.py
src/mangala_bulan/core/__pycache__/: solver.compute_michaelis_menten-11.py312.1.nbc  solver.compute_michaelis_menten-11.py312.nbi  solver.compute_myoglobin_equilibrium-18.py312.1.nbc  solver.compute_myoglobin_equilibrium-18.py312.nbi
src/mangala_bulan/io/: __init__.py  config_manager.py  data_handler.py
src/mangala_bulan/utils/: __init__.py  logger.py
src/mangala_bulan/visualization/: __init__.py  animator.py
