[tool.poetry]
name = "mangala-bulan"
version = "0.0.1"
description = "Oxygen diffusion solver with Michaelis-Menten kinetics and myoglobin facilitation"
authors = ["Sandy H. S. Herho", "Gandhi Napitupulu"]
license = "MIT"
readme = "README.md"
packages = [{include = "mangala_bulan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
pandas = ">=1.3.0"
tqdm = ">=4.60.0"
numba = ">=0.53.0"
imageio = ">=2.9.0"

[tool.poetry.scripts]
mangala-bulan = "mangala_bulan.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
